# python-web-realtime-streaming

./: README.md  main.py  pyproject.toml
static/js/: timechart.min.js  timechart.min.js.map
templates/: index.htm
